Add Stripe payment link, thank-you page, and kit ZIP

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <div class="section-label" style="margin-bottom:16px;">Get Started Today</div>
     <h2>Deploy your AI entrepreneur<br />for $29</h2>
     <p>One-time payment. Instant download. 30-day money-back guarantee — no questions asked.</p>
-    <a href="GUMROAD_LINK" class="btn-primary">Get the Starter Kit →</a>
+    <a href="https://buy.stripe.com/4gM00i6Sbaz71qka02cMM00" class="btn-primary">Get the Starter Kit →</a>
     <p style="margin-top:16px;font-size:13px;color:var(--gray-400);">Secure checkout via Gumroad · PDF + template files · Instant delivery</p>
   </div>
 
