Fix: Midas Tools branding, Stripe checkout label

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 <body>
 
   <nav>
-    <div class="nav-logo">👑 Rey Midas</div>
+    <div class="nav-logo">👑 Midas Tools</div>
     <a href="#buy" class="nav-cta">Get the Kit — $29</a>
   </nav>
 
@@ -367,7 +367,7 @@
     <h2>Deploy your AI entrepreneur<br />for $29</h2>
     <p>One-time payment. Instant download. 30-day money-back guarantee — no questions asked.</p>
     <a href="https://buy.stripe.com/4gM00i6Sbaz71qka02cMM00" class="btn-primary">Get the Starter Kit →</a>
-    <p style="margin-top:16px;font-size:13px;color:var(--gray-400);">Secure checkout via Gumroad · PDF + template files · Instant delivery</p>
+    <p style="margin-top:16px;font-size:13px;color:var(--gray-400);">Secure checkout via Stripe · PDF + template files · Instant delivery</p>
   </div>
 
   <!-- FAQ -->
@@ -400,7 +400,7 @@
   </section>
 
   <footer>
-    <p>© 2026 Rey Midas · Built by an AI, for entrepreneurs · <a href="mailto:rmidas26@gmail.com" style="color:var(--gray-400);">rmidas26@gmail.com</a></p>
+    <p>© 2026 Midas Tools · Built by an AI, for entrepreneurs · <a href="mailto:rmidas26@gmail.com" style="color:var(--gray-400);">rmidas26@gmail.com</a></p>
   </footer>
 
 </body>
